# clothes

./: .gitignore  README.md  main.py  pyproject.toml  saml.txt
claude/: DEPLOYMENT.md  README.md  README2.md  TROUBLESHOOTING.md  __init__.py  deploy.sh  generate_site.py  main.py  nginx-wardrobe.conf  pyproject.toml  read_sheet.py  serve_website.py
claude/output/: wardrobe_data.json
claude/output/website/: index.html  styles.css  wardrobe_data.json
claude/prompts/: 02.txt  03.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
claude/site_template/: styles.css
claude/source_data/: wardrobe_data.json
claude/source_photos/Shirts/: IMG_7056.HEIC  IMG_7058.HEIC  IMG_7059.HEIC  IMG_7061.HEIC  IMG_7074.HEIC  (+18 more)
notebooks/: Google Sheets.ipynb  Write Sheet.ipynb  generator.ipynb
notebooks/.ipynb_checkpoints/: Google Sheets-checkpoint.ipynb  generator-checkpoint.ipynb  saml-checkpoint.ipynb
scripts/: run_tests.py
src/: README.md  deploy.sh  generate_site.py  generate_site_legacy.py  read_sheet.py  read_sheet_legacy.py  write_sheet.py  write_sheet_legacy.py
src/prompts/: 01.txt  04.txt  11.txt  12.txt  13.txt  14.txt
src/site_template/: index.html
src/wardrobe/: __init__.py  cli.py
src/wardrobe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_image_processor.py  test_integration.py  test_sheets_reader.py
wardrobe-site/: README.html  README.md  index.html  item.html  pyproject.toml  styles.css
wardrobe-site/data/: items.json
wardrobe-site/scripts/: item.js  main.js  utils.js
(+545 files in other folders)
