[project]
name = "clothes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.181.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "jupyter>=1.1.1",
    "pillow>=11.3.0",
    "pillow-heif>=1.1.0",
]
